wepy初步提交 存在bug

--- a/src/common/common.wxss
+++ b/src/common/common.wxss
@@ -17,6 +17,7 @@
 }
 .container {
   background: #eee;
+  color: #333;
   min-height: 1000rpx;
   padding-bottom: 200rpx;
   margin-bottom: -200rpx;
