--- a/src/common/common.less
+++ b/src/common/common.less
@@ -2,15 +2,17 @@
   @import '../../lib/style/font.wxss';
 @bgc:#eee;
 @bgc-card:#fff;
-@color:#000;
-@color-side:#999;
-@score-color:cadetblue;
+@color-font:#333;
+@color-sideFont:#999;
+@btn1-color:cadetblue;
+@btn2-color:origin;
 .button-hover {
   background-color: rgba(255, 0, 0, 0.1); 
   opacity: 0.7;
 }
 .container{
   background: @bgc;
+  color:@color-font;
   min-height:1000rpx;
   padding-bottom:200rpx;
   margin-bottom:-200rpx;
