--- a/src/common/common.less
+++ b/src/common/common.less
@@ -1,18 +1,18 @@
 
-  @import '../../lib/style/font.wxss';
+@import './common.wxss';
 @bgc:#eee;
 @bgc-card:#fff;
-@color-font:#333;
-@color-sideFont:#999;
-@btn1-color:cadetblue;
-@btn2-color:origin;
+@font:#333;
+@font-side:#999;
+@btn:cadetblue;
+@btn-em:orange;
 .button-hover {
   background-color: rgba(255, 0, 0, 0.1); 
   opacity: 0.7;
 }
 .container{
   background: @bgc;
-  color:@color-font;
+  color:@font;
   min-height:1000rpx;
   padding-bottom:200rpx;
   margin-bottom:-200rpx;
