--- a/src/common/common.wxss
+++ b/src/common/common.wxss
@@ -22,3 +22,25 @@
   padding-bottom: 200rpx;
   margin-bottom: -200rpx;
 }
+.button-hover {
+  background-color: rgba(255, 0, 0, 0.1);
+  opacity: 0.7;
+}
+.container {
+  background: #eee;
+  color: #333;
+  min-height: 1000rpx;
+  padding-bottom: 200rpx;
+  margin-bottom: -200rpx;
+}
+.button-hover {
+  background-color: rgba(255, 0, 0, 0.1);
+  opacity: 0.7;
+}
+.container {
+  background: #eee;
+  color: #333;
+  min-height: 1000rpx;
+  padding-bottom: 200rpx;
+  margin-bottom: -200rpx;
+}
