--- a/common/common.less
+++ b/common/common.less
@@ -1,15 +1,16 @@
+
+@import './common.wxss';
 @bgc:#eee;
 @bgc-card:#fff;
-@color:#000;
-@color-side:#999;
-@score-color:cadetblue;
+@font:#333;
+@font-side:#999;
+@btn:cadetblue;
+@btn-em:orange;
 .button-hover {
   background-color: rgba(255, 0, 0, 0.1); 
   opacity: 0.7;
 }
 .container{
   background: @bgc;
-  min-height:1000rpx;
-  padding-bottom:200rpx;
-  margin-bottom:-200rpx;
+  color:@font;
 }
